This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
11/20/17: Fixed potential problems with spot intensity calibrations that do
not start at spot 1 (In 3.6).

11/19/17: Added small dialog for entering and running a single-line script
command.

11/9/17: Substituted variables in SaveLogOpenNew command (In 3.6).

11/8/17: Fixed loss of PriorRecordDose and FramesDosesCounts from mdoc for
first part of bidirectional tilt series.

11/5/17 SEM_3-6-13
11/5/17: Fixed the lack of defect correction when drift correction is used in
the OneView if there is no BasicCorrections property entry (In 3.6).

11/3/17: Preliminary version with changes for DE camera
counting/super-resolution modes and ability to set save folder.

11/3/17: Rearranged camera setup so that dark reference options could be
hidden when inappropriate, also hide shuttering and lower size buttons for
Falcon.

10/22/17: Prevented DE camera FPS value from being put in wrong camera's
parameters (In 3.6).

10/21/17: Added a task to take multiple Record shots in a hole with image
shift, a script command to run the task, an option to draw the pattern of
shots when showing the Acquire area in Navigator, and a dialog to set the
parameters for the task and for drawing.

10/21/17: Added script commands to measure beam size from beam edges in the
image, and to shift the beam by an amount in microns or as a fraction of field
size.

10/18/17: Add a property to turn off Convert Maps to Bytes by default.

10/14/17: Fixed fast continuous mode for Gatan cameras with a GIF in the
system to not stop and restart (In 3.6).

10/13/17: Fixed crash with early return from 9/17 changes.

10/11/17: Fixed method of looking up mag index from a mag value, which fixes
problems in removing IS and stage calibrations (In 3.6).
