@@ -170,6 +170,14 @@
       option is turned on, the window will be created when an FFT is taken.&nbsp; You 
       can close the window, and it will be reopened when another FFT is taken.&nbsp; 
       The window is closed when the option is turned off.</P>
+    <P>When the FFT window is open, the allocation of the available width between the 
+      two windows is based on a fraction that you can adjust and that is stored 
+      between uses of the side-by-side display.&nbsp; Adjusting the right edge of the 
+      main window or the left edge of the FFT window will cause both windows to be 
+      redrawn with a new fraction.&nbsp; Adjusting the right edge of the FFT window 
+      will change the amount of available width, but only the size of the FFT window 
+      will change.&nbsp; Adjusting the bottom edge of either window will cause both 
+      windows to be redrawn with that height.</P>
     <P>Shortcut Key: SHIFT+S</P>
       <P><A NAME="hid_process_automaticffts"></A><B>Automatic Single FFTs command (Process menu)</B></P>
     <P>Use this command to have FFTs computed automatically for every new single-frame 
