@@ -3,6 +3,11 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+11/24/17: Made the program store the fraction of the area in the frame
+occupied by the main image window so that the window can be kept reliably
+smaller than the frame; the allocation of width between the main and
+FFT window is also stored and can be easily adjusted.
+
 11/20/17: Fixed potential problems with spot intensity calibrations that do
 not start at spot 1 (In 3.6).
 
